sample/emtpydir-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
  - image: busybox
    name: busybox1
    args:
      - /bin/sh
      - -c
      - sleep 3600
    volumeMounts:
    - mountPath: /etc/foo
      name: cache-volume
  - image: busybox
    name: busybox2
    args:
      - /bin/sh
      - -c
      - sleep 3600
    volumeMounts:
    - mountPath: /etc/foo
      name: cache-volume  
  volumes:
  - name: cache-volume
    emptyDir: {}
