sample/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  annotations:
    hello: there
  name: nginx
  namespace: default
spec:
  schedulerName: default-scheduler
  containers:
  - image: nginx
    name: nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
