sample/nginx_deployment_sample1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      run: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
