sample/pod-requests-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: limits-pods
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "256Mi"
        cpu: "100m"
      limits:
        memory: "512Mi"
        cpu: "200m"
