sample/readiness-prob.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: readiness-http
spec:
  containers:
  - name: readiness-http
    image: nginx
    ports:
      - containerPort: 80  
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3
