sample/serviceaccount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-account-pod
spec:
  serviceAccountName: myuser 
  containers:
  - name: mycontainer
    image: nginx
