sample/network-pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    {}
  policyTypes:
   - Ingress
  ingress:
   - {}
   # []
